fix_vertical-align

--- a/app/assets/stylesheets/modules/_top.scss
+++ b/app/assets/stylesheets/modules/_top.scss
@@ -144,6 +144,7 @@
 								display: inline-block;
 								margin-left: 10px;
 								margin-right: 50px;
+								vertical-align: text-top;
 							}
 						
 							&--li2 {
